--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<head> 
+    <title>FiveBeat</title>
+  <link href="anasayfa.css" rel="stylesheet">
+  <link rel="shortcut icon" type="image/jpeg" href="logo.PNG"/>
+</head> 
+<body> 
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
-</head>
+<div class="a"> <img src="logo.PNG" alt="Photography"style="margin-top:-10px;width:250px;height:100px;" ></div>
+<div class="navbar">
+    <a href="anasayfa.html">Anasayfa</a>
+  </div>
 
-<body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
+  <a><img src="ati1.jpg" alt="Photography" style="position:absolute;width:1000px;height:1000px;margin-left:0px;margin-top:0px;margin-bottom:-170px;"></a>
+  <div class="text">
+    <p>
+FiveBeat, ismimiz bu çünkü sporda bizim için en önemli
+5 yapı taşı kalori, protein, yemek tarifi, fitness programı
+ve takviyelerdir.
+Spora yeni başlayanlar için başlangıç ve teorik
+bilgileri öğrenmesi, tecrübeli sporcular içinse besin
+hesaplamaları ve fitness programı, yemek tariflerine ulaşabilmesi amaçlanmıştır.
+</p>
+</div>
+</div>
 </body>
-
 </html>
