--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,60 @@
 <!DOCTYPE html>
-<html>
-<head> 
-    <title>FiveBeat</title>
-  <link href="anasayfa.css" rel="stylesheet">
-  <link rel="shortcut icon" type="image/jpeg" href="logo.PNG"/>
-</head> 
-<body> 
+<html lang="en">
+<meta charset="UTF-8">
+<title>Catering</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+body {font-family:"Times New Roman", serif}
+h1,h2,h3,h4,h5,h6 {font-family:serif; letter-spacing:5px}
+</style>
+<body>
 
-<div class="a"> <img src="logo.PNG" alt="Photography"style="margin-top:-10px;width:250px;height:100px;" ></div>
-<div class="navbar">
-    <a href="anasayfa.html">Anasayfa</a>
-  </div>
+<!-- Navigation (Sits on top) -->
+<div class="w3-top w3-bar w3-white w3-padding w3-card w3-wide">
+<a href="#home" class="w3-bar-item w3-button">Gourmet au Catering</a>
 
-  <a><img src="ati1.jpg" alt="Photography" style="position:absolute;width:1000px;height:1000px;margin-left:0px;margin-top:0px;margin-bottom:-170px;"></a>
-  <div class="text">
-    <p>
-FiveBeat, ismimiz bu çünkü sporda bizim için en önemli
-5 yapı taşı kalori, protein, yemek tarifi, fitness programı
-ve takviyelerdir.
-Spora yeni başlayanlar için başlangıç ve teorik
-bilgileri öğrenmesi, tecrübeli sporcular içinse besin
-hesaplamaları ve fitness programı, yemek tariflerine ulaşabilmesi amaçlanmıştır.
-</p>
+<!-- Right-sided navbar links. Hide them on small screens -->
+<div class="w3-right w3-hide-small">
+<a href="#about" class="w3-bar-item w3-button">About</a>
+<a href="#menu" class="w3-bar-item w3-button">Menu</a>
+<a href="#contact" class="w3-bar-item w3-button">Contact</a>
 </div>
 </div>
+
+<!-- Start Content -->
+<div id="home" class="w3-content">
+
+<!-- Image in Display Container-->
+<div class="w3-display-container w3-padding-top-48">
+<img src="img_hamburger.jpg" alt="Catering" style="width:100%">
+<div class="w3-display-bottomleft w3-padding w3-opacity">
+<h1>Le Catering</h1>
+</div>
+</div>
+
+<!-- About -->
+<div id="about" class="w3-padding-top-64">
+<div class="w3-row">
+
+<div class="w3-half w3-padding-large w3-hide-small">
+<img src="img_tablesetting2.jpg" class="w3-round w3-image w3-opacity-min" alt="Table" style="width:100%">
+</div>
+
+<div class="w3-half w3-padding-large">
+<h1 class="w3-center">About Catering</h1><br>
+<h5 class="w3-center">Tradition since 1889</h5>
+<p class="w3-large">
+The Catering was founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<p class="w3-large w3-text-grey w3-hide-medium">
+Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua.</p>
+</div>
+
+</div>
+</div>
+
+<!-- End Content -->
+</div>
+
 </body>
-</html>
+</html> 
