--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Catering</title>
+<title>Our History</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
@@ -43,9 +43,9 @@ h1,h2,h3,h4,h5,h6 {font-family:serif; letter-spacing:5px}
 <h1 class="w3-center">About Catering</h1><br>
 <h5 class="w3-center">Tradition since 1889</h5>
 <p class="w3-large">
-The Catering was founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+Londoners are moving on from over-iced cupcakes and stiff chocolate éclairs – from ancient grains to slow fermentation and Scandi-inspired delights, these are the best bakeries in London right now.</p>
 <p class="w3-large w3-text-grey w3-hide-medium">
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua.</p>
+It’s easy to head to the same old bakery in London day in and day out for your favourite cronut, cinnamon bun and flat white order.</p>
 </div>
 
 </div>
