--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,7 @@
 <head> 
     <title>Kalori </title>
     <link href="kalori.css" rel="stylesheet">
-    <link rel="shortcut icon" type="image/PNG" href="logo.PNG"/>
-    <div class="a"> <img src="logo.PNG" alt="Photography"style="margin-top:-10px;width:250px;height:100px;" ></div>
+   
 
 </head>
 
@@ -143,6 +142,54 @@
                             </button>
                         </div>
                     </div>
+                    <style>
+    
+a:link {
+  color: white;
+}
+
+.navbar {
+    overflow: hidden;
+    background-color:gray;
+  }
+
+  .navbar a:hover {
+    background-color: rgb(92, 38, 19);
+  }
+  
+.navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    text-decoration: none;
+    font-size: 20;
+  }
+  
+.navbar a.right {
+    float: right;  
+}
+
+body {   
+background-color: rgb(40, 34, 34);
+}
+
+div.a {
+    text-align: center;
+}
+  
+  #color-overlay {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: red;
+      opacity: 0.6;
+  }
+  
+</style>
                 </form>
                 <script>
                     function calculateCalorie(obj)
